--- a/windows_rack_sdk/Dockerfile
+++ b/windows_rack_sdk/Dockerfile
@@ -1,12 +1,9 @@
-FROM debian:stretch
+FROM windows_platform:stretch
 
-LABEL "name"="VCVRack builder for windows"
+LABEL "name"="VCVRack sdk for windows"
 
 ENV WORKDIR /usr/src/app
 WORKDIR /usr/src/app
-
-RUN apt-get update
-RUN apt-get install -y build-essential cmake curl gcc g++ git make tar unzip zip libgl1-mesa-dev libglu1-mesa-dev jq g++-mingw-w64-x86-64
 
 ADD entrypoint.sh entrypoint.sh
 RUN chmod a+x entrypoint.sh
